dhall/tests/type-inference/failure/unit/LetInSort.txt
Type error: error: Sort does not have a type
 --> <current file>:1:19
  |
1 | \(x: let x = 0 in Sort) -> 1
  |                   ^^^^ Sort does not have a type
  |
